--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -11,10 +11,10 @@
 }
 
 .project-title {
-  color: #fff;
-  font-size: 35px;
-  font-weight: 700;
-  letter-spacing: 1.75px;
+    color: #fff;
+    font-size: 35px;
+    font-weight: 700;
+    letter-spacing: 1.75px;
 }
 
 .projects-grid {
@@ -61,20 +61,25 @@
   transform: translateY(-10px);
 }
 
-@media screen and (max-width: 850px) {
-  .projects-grid {
-    flex-direction: column;
-    align-items: center;
-    gap: 3rem;
+@media screen and (max-width: 600px) {
+  .project-container {
+    margin: 0;
+    padding: 2rem 1rem;
+    border-radius: 0;
+  }
+
+  .project-title {
+    font-size: 28px;
+    text-align: center;
   }
 
   .project-card {
-    width: 100%;
-    height: auto;
+    width: 95vw;
     padding: 1rem;
   }
 }
-.image-modal {
+
+  .image-modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -95,3 +100,4 @@
   transition: 0.3s ease-in-out;
   cursor: pointer;
 }
+
