--- a/src/App.css
+++ b/src/App.css
@@ -188,3 +188,19 @@
   
 }
 
+@media screen and (max-width: 850px) {
+  .about-title,
+  .project-title,
+  .skill-title {
+    text-align: center;
+  }
+
+  .about-container,
+  .project-container,
+  .skill-container {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
